--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Methods for Adding CSS</title>
-  </head>
-  <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
-  </body>
+<html lang = "en">
+    <head>
+        <meta charset="utc-108">
+        <title>idk man</title>
+
+        <style>
+            .middle{
+                color:white;
+                background-color: green;
+            }
+        </style>
+
+        <link rel="stylesheet" href="styles.css">"
+    </head>
+    <body>
+        
+       <!-- <img src = ""> -->
+      
+     <div class="footer">
+        <p>Style me via the external method!</p>
+    </div>
+
+
+    <div class="middle">
+        <p>I woukd like to be styked with the internal method, please</p>
+    </div>
+
+    <div class="button">
+        <button style="background-color: orange;"> Inline method</button>
+    </div>
+
+    </body>
 </html>
